--- a/html/console.html
+++ b/html/console.html
@@ -4,7 +4,7 @@
     <title>Portal for QA</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
-    <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:700"
       rel="stylesheet"
@@ -15,30 +15,17 @@
   <body>
     <!--Card-->
     <div class="card animated fadeIn">
-      <p class="subtitle">Командная строка Windows</p>
-      <h3 id="rt-0">Управление файлами и папками</h3>
+      <p class="subtitle">Console в DevTools</p>
+      <h3 id="rt-0">Виды сообщений в Console</h3>
       <ul>
-        <li>COPY – Копирование файлов в другое место</li>
-        <li>DIR – вывод информации о содержимом дисков и каталогов</li>
-        <li>CD – Отображение файлов и папок в текущем каталоге</li>
-        <li>MAKEDIR – Создать папку</li>
-        <li>MOVE – Переименование и перемещение файлов из одной папки в другую</li>
-      </ul>
-      <h3 id="rt-1">Приложения и процессы</h3>
-      <ul>
-        <li>TASKLIST – Список выполняемых задач</li>
-        <li>
-          TASKKILL – Остановить или прекратить выполнение задачи (для остановки
-          задачи используется PID, который можно узнать из TASKLIST).
-        </li>
-      </ul>
-      <h3 id="rt-3">Системная информация</h3>
-      <ul>
-        <li>DATE – Выводит или устанавливает текущую дату</li>
-        <li>TIME – Выводит или устанавливает системное время</li>
-        <li>HOSTNAME – Отображает имя компьютера</li>
-        <li>SYSTEMINFO – Отображает информацию о конфигурации компьютера</li>
-        <li>VER – Позволяет просмотреть версию Windows</li>
+        <li>Log Info — информационное сообщение. </li>
+        <li>Log Warning — предупреждающее сообщение. </li>
+        <li>Log Error — сообщение об ошибке. </li>
+        <li>Log Table — сообщение в виде таблицы.</li>
+        <li>Log Group — группы значений.</li>
+        <li>Log Custom — сообщение в произвольном формате. </li>
+        <li>Cause 404 — ошибка 404 </li> 
+        <li>Cause Error — произвольная ошибка. </li>
       </ul>
     </div>
     <!--footer-->
